# nimo

./: .gitignore  CMakeLists.txt  README.md  make.bat  run.bat
editor/: AssetExplorerPanel.cpp  AssetExplorerPanel.h  CMakeLists.txt  EditorLayer.cpp  EditorLayer.h  EditorPanel.cpp  EditorPanel.h  GameViewPanel.cpp  GameViewPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.h  RendererDebugPanel.h  SceneContentsPanel.cpp  SceneContentsPanel.h  SceneViewPanel.cpp  SceneViewPanel.h  StatisticsPanel.h  UIHelpers.cpp  UIHelpers.h  main.cpp
engine/: CMakeLists.txt
engine/assets/: Asset.h  AssetFileExtensions.cpp  AssetFileExtensions.h  AssetIndex.cpp  AssetIndex.h  AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetSerializer.cpp  AssetSerializer.h  AssetSettings.h  AssetSettingsSerializer.cpp  AssetSettingsSerializer.h  AssetType.h  ImageSource.cpp  ImageSource.h  MeshSource.cpp  MeshSource.h
engine/audio/: AudioEngine.cpp  AudioEngine.h  AudioSound.cpp  AudioSound.h  AudioSource.cpp  AudioSource.h
engine/core/: Application.cpp  Application.h  Entry.cpp  Entry.h  Event.h  FileHandling.cpp  FileHandling.h  GUID.cpp  GUID.h  Layer.cpp  Layer.h  Log.cpp  Log.h  Timer.h  Window.cpp  Window.h  WindowEvents.h
engine/events/: EventManager.h  KeyEvents.h  LogEvents.h  MouseEvents.h  ProjectEvents.h  SceneManagerEvents.h  ScriptManagerEvents.h  WindowEvents.h
engine/fonts/: Font.cpp  Font.h
engine/input/: Input.cpp  Input.h  KeyCodes.h
engine/project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
engine/renderer/: Context.cpp  Context.h  EnvironmentMap.cpp  EnvironmentMap.h  FrameBuffer.cpp  FrameBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Material.h  MaterialProperties.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  SceneRenderer.cpp  SceneRenderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
engine/scene/: Components.h  Entity.cpp  Entity.h  Prefab.cpp  Prefab.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  SceneSerializer.cpp  SceneSerializer.h
engine/scripting/: Script.cpp  Script.h  ScriptField.h  ScriptInstance.h  ScriptManager.cpp  ScriptManager.h  ScriptUtils.cpp  ScriptUtils.h
engine/scripting/lua_hooks/: LuaApplication.cpp  LuaApplication.h  LuaComponents.cpp  LuaComponents.h  LuaDebug.cpp  LuaDebug.h  LuaInput.cpp  LuaInput.h  LuaSceneManagement.cpp  LuaSceneManagement.h  LuaWindow.cpp  LuaWindow.h
res/: NewScript.lua
res/NewProjectAssets/Audio/: Strength of the Titans.txt
res/NewProjectAssets/Crate/: wooden_crate_01_4k.fbx
res/NewProjectAssets/Scripts/: CameraController.lua  ContinousRotation.lua  Entity.lua  test.lua
res/NewProjectAssets/Shaders/: background.nshader  deferred_shading_pbr.nshader  depth.nshader  equirectangular_to_cubemap.nshader  gBuffer.nshader  hdr_bloom_downsample.nshader  hdr_bloom_upsample.nshader  hdr_bright_filter.nshader  hdr_tone_mapping.nshader  irradiance_convolution.nshader  text.nshader  unlit_color.nshader  unlit_texture.nshader
res/materials/: test.nmat
res/modules/: AssetHandle.lua  CoroutineManagement.lua  Entity.lua  EntityHandle.lua  Vector.lua
res/objects/cube/: cube.mtl
res/objects/pirates/: cannonBall.mtl  sword.mtl
res/objects/planet/: planet.mtl
res/shaders/: background.nshader  deferred_light_box.nshader  deferred_shading.nshader  deferred_shading_pbr.nshader  gBuffer.nshader  hdr_tone_mapping.nshader  pbr.nshader  texture.nshader  unlit_color.nshader  unlit_texture.nshader
runtime/: CMakeLists.txt  RuntimeLayer.cpp  RuntimeLayer.h  main.cpp
